--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>今日は避難訓練</h1>
-   
+    <img src="images/wtr0053-024.jpg" alt="sea surface">
+
     <p>At Mozilla, we’re a global community of</p>
 
     <ul> <!-- changed to list in the tutorial -->
